# backend

./: .env.sample  .flake8  .gitignore  .pre-commit-config.yaml  .pre-commit-config.yml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  docker.env  gunicorn.conf.py  manage-deployment.py  pyproject.toml  sdm.py
.github/workflows/: dev-push.yml  docker-push.yml  python-package.yml  release-docker-push.yml
alembic/: README  env.py
alembic/versions/: 17d179e1b988_create_scanresult_model_for_storing_.py  1ba4c36d2ca3_init.py  3ef49b8773ad_initial.py  5f92d8b744a6_add_role_in_users_table.py  f6f720dcd6dc_add_superuser_field.py
safeack_backend/: __main__.py  api.py  config.py  database.py  logger.py  models.py
safeack_backend/auth/: __init__.py  crud.py  handler.py  models.py  permissions.py  schemas.py  views.py
safeack_backend/management/: __init__.py  schemas.py  utils.py  views.py
safeack_backend/offat_scan/: __init__.py  crud.py  enums.py  models.py  schemas.py  views.py
safeack_backend/scripts/: __init__.py  create_superuser.py  shell.py
safeack_backend/tests/: __init__.py  test_auth.py  test_main.py  test_mgmt.py  test_scanner.py  utils.py
safeack_backend/utils/: db_result_handler.py  http.py  regex.py  schemas.py  secrets.py
safeack_backend/utils/aws/: s3.py
